--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8"/>
         <title>CSS</title>        
     </head>
+    <link rel="stylesheet" href="\css\estilo.css">
     <body>
+        <p>Aqui estão os cachorrinhos disponíveis para adoção no momento. Aproveite!</p>
         
     </body>
 </html>
