--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="\css\estilo.css">
     <body>
         <p>Aqui estão os cachorrinhos disponíveis para adoção no momento. Aproveite!</p>
-        
+        <figure>
+            <img src="img/sample1.jpg">
+            <figcaption></figcaption>
+        </figure>
+        <figure>
+            <img src="img/sample2.jpg">
+            <figcaption></figcaption>
+        </figure>
+        <figure>
+            <img src="img/sample3.jpg">
+            <figcaption></figcaption>
+        </figure>
+        <figure>
+            <img src="img/sample4.jpg">
+            <figcaption></figcaption>
+        </figure>
+        <figure>
+            <img src="img/sample5.jpg">
+            <figcaption></figcaption>
+        </figure>
     </body>
 </html>
