--- a/index.html
+++ b/index.html
@@ -6,26 +6,32 @@
     </head>
     <link rel="stylesheet" href="\css\estilo.css">
     <body>
+        <header>
+            <h1>Galeria de Fotos</h1>
+        </header>
         <p>Aqui estão os cachorrinhos disponíveis para adoção no momento. Aproveite!</p>
         <figure>
             <img src="img/sample1.jpg">
-            <figcaption></figcaption>
+            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quo sunt laborum expedita similique! Asperiores nihil maiores reiciendis pariatur ab quod doloribus iure sapiente, enim odio consequuntur minima non temporibus.</figcaption>
         </figure>
         <figure>
             <img src="img/sample2.jpg">
-            <figcaption></figcaption>
+            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus voluptate quas sed expedita. Corrupti, placeat. Voluptatum, similique omnis cum neque, illo dolorum fugit quo consectetur sequi qui amet praesentium minus!</figcaption>
         </figure>
         <figure>
             <img src="img/sample3.jpg">
-            <figcaption></figcaption>
+            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, provident? Sed itaque saepe ipsam commodi magni. Asperiores amet ratione sed sint dolor at suscipit, optio vero omnis est quidem quod?</figcaption>
         </figure>
         <figure>
             <img src="img/sample4.jpg">
-            <figcaption></figcaption>
+            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quo unde eveniet eius ratione, molestiae pariatur temporibus sunt veniam ab nostrum eum quaerat debitis possimus magnam vel quibusdam voluptatum esse.</figcaption>
         </figure>
         <figure>
             <img src="img/sample5.jpg">
-            <figcaption></figcaption>
+            <figcaption>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo, nam. Placeat aperiam soluta, nihil nesciunt aut, omnis earum maxime quisquam saepe neque sunt asperiores porro vitae animi magni cupiditate. Deleniti.</figcaption>
         </figure>
+        <footer>
+            @2023 Aplicações para Internet
+        </footer>
     </body>
 </html>
