--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <title>CSS</title>        
     </head>
-    <link rel="stylesheet" href="aula5-ativ1\css\estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     <body>
         <header>
             <h1>Galeria de Fotos</h1>
